# textprint

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: branch.yaml
docs/: conf.py  index.rst  modules.rst  textprint.patterns.rst  textprint.rst
tests/: test_textprint.py
tests/patterns/: test_ascii.py  test_bitcoin_address.py  test_c_identifier.py  test_coord.py  test_credit_card.py  test_date.py  test_doi.py  test_email.py  test_emoji.py  test_han_unification.py  test_hashtag.py  test_hyphen_word_break.py  test_ip.py  test_jira.py  test_mac_address.py  test_pan_gstin.py  test_password.py  test_phone_number.py  test_port_number.py  test_semantic_versioning.py  test_ssn.py  test_url.py  test_url_slug.py  test_username.py  test_uuid.py
textprint/: __init__.py  cli.py  dataset.py  sequencer.py
textprint/patterns/: __init__.py  ascii.py  base.py  bitcoin_address.py  c_identifier.py  coords.py  credit_card.py  date.py  doi.py  email.py  emoji.py  han_unification.py  hashtag.py  hyphen_word_break.py  ip.py  jira.py  mac_address.py  pan_gstin.py  password.py  pattern_list.py  phone_number.py  port_number.py  semantic_versioning.py  ssn.py  url.py  url_slug.py  username.py  uuid.py
