[tool.poetry]
name = "textprint"
version = "0.1.0"
description = "Regex patterns. Simplified."
packages = [{ include = "textprint" }]
authors = ["Shadi Boomi <shadi.boomi@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sboomi/textprint"
documentation = "http://textprint.readthedocs.io/"
classifiers = [
    "Topic :: Utilities",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "text", "regex"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sboomi/textprint/issues"
"Wiki" = "https://github.com/sboomi/textprint/wiki"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^2.1.1"
mypy = "^0.971"
Sphinx = "^5.1.1"
pre-commit = "^2.20.0"
darglint = "^1.8.1"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
